testing mudlake nowrap, is cutoff brave bug?

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 	align-items: center;
 	align-self: end;
 	justify-self: center;
-	overflow: hidden;
+	white-space: nowrap;
 }
 
 #larue-thumbnail-container {
